Changed procedure name to link

--- a/app/views/work_packages/show.html.haml
+++ b/app/views/work_packages/show.html.haml
@@ -11,7 +11,7 @@
       %dt
         = t('work_packages.show.procedure').capitalize
       %dd
-        = @procedure.name
+        = link_to("#{@procedure.name}", procedure_path(@procedure.graph_id))
 
 - if @work_packageable_thing
   %section
