--- a/app/views/procedures/show.html.haml
+++ b/app/views/procedures/show.html.haml
@@ -1,7 +1,9 @@
-- page_title = title("#{@procedure.name.downcase.capitalize} #{t('.procedure')}")
+- page_title = title(@procedure.name.downcase.capitalize)
 
 .section--primary#content{ tabindex: "0" }
   .container
+    %small
+      = link_to(t('.procedure').capitalize.pluralize, procedures_path)
     %h1
       %span= page_title
     %p
