[WEBDEV-996] SI label updates and Pugin version bump

--- a/app/views/procedures/show.html.haml
+++ b/app/views/procedures/show.html.haml
@@ -18,4 +18,4 @@
         .card
           .card__details
             %h2
-              = link_to(t('.work_packages'), procedure_work_packages_path(@procedure.graph_id))
+              = link_to(t('.procedural_activity'), procedure_work_packages_path(@procedure.graph_id))
