--- a/app/views/work_packages/show.html.haml
+++ b/app/views/work_packages/show.html.haml
@@ -3,7 +3,7 @@
 .section--primary#content{ tabindex: "0" }
   .container
     %small
-      = link_to(t('.work_packages_link'), work_packages_path)
+      = link_to(t('.procedural_activity_link'), work_packages_path)
     %h1
       %span= page_title
 
