--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -48,22 +48,14 @@
 
 %section
   .container
-    %h2= t('.current_hybrid_bills').capitalize
+    %h2= t('.past_hybrid_bills').capitalize
 
     %ol.list--block
-
       %li
         .card
           .card__details
             %h3= link_to(("#{t('hybrid_bills.hs2_ap')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('2'))
-            %p= t('hybrid_bills.id2.petition_status_pre')
-
-%section
-  .container
-    %h2= t('.past_hybrid_bills').capitalize
-
-    %ol.list--block
-
+            %p= t('hybrid_bills.id2.petition_status_post')
       %li
         .card
           .card__details
