[WEBDEV-1126] Replace .highlight--box with .status--highlight

--- a/app/views/parties/show.html.haml
+++ b/app/views/parties/show.html.haml
@@ -16,7 +16,7 @@
 - else
   %section
     .container
-      .highlight--box.highlight--primary
+      .status--highlight.theme--caution
         %p= t('.party_no_current_members')
       %ul.list--block
         %li
