--- a/app/views/constituencies/_constituency.html.haml
+++ b/app/views/constituencies/_constituency.html.haml
@@ -16,7 +16,7 @@
         = render 'shared/election_message'
 
       - if @current_incumbency.nil?
-        .highlight--box.highlight--caution__soft
+        .status--highlight.theme--caution
           %p= t('no_content.empty_list.no_mp')
       - else
         = render 'member_info'
@@ -24,7 +24,7 @@
 - else
   .section
     .container
-      .highlight--box.highlight--caution__soft
+      .status--highlight.theme--caution
         %p= t('.former_constituency', current_constituencies_link: link_to(t('.current_constituencies_link').capitalize, constituencies_current_path)).html_safe
 
 - if @seat_incumbencies.size > 0
