--- a/app/views/media/show.html.haml
+++ b/app/views/media/show.html.haml
@@ -25,7 +25,7 @@
         = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_original'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?download=true", class: 'btn--primary', 'aria-label': t('.download_jpeg').capitalize + " portrait of #{@person.display_name} " + t('.alt_text_wide_original'), download: '' )
 
       - else
-        .highlight--box.highlight--caution__soft
+        .status--highlight.theme--caution
           %p= t('.no_portrait')
 
 
