--- a/app/views/work_packages/_no_date_business_item.html.haml
+++ b/app/views/work_packages/_no_date_business_item.html.haml
@@ -2,10 +2,11 @@
   %li
     .card
       .card__details
-        - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
-          %p
-            - procedure_step.houses.each do |house|
-              %span.hint= house.name
-            = procedure_step.name
+        %ol.list
+          - business_item.sorted_procedure_steps_by_distance.each do |procedure_step|
+            %li
+              - procedure_step.houses.each do |house|
+                %span.hint= house.name
+              %p= procedure_step.name
         - unless business_item.weblink.empty?
           %p= link_to t('work_packages.find_out_more_stage'), "#{business_item.weblink}"
