[CTEWEB-466] Create pages for hybrid bills petition

--- a/app/views/hybrid_bills/steps/terms-conditions.haml
+++ b/app/views/hybrid_bills/steps/terms-conditions.haml
@@ -49,6 +49,8 @@
 
     %p= t('hybrid_bills.terms-conditions.personal_info_l')
 
+    %p= sanitize t('hybrid_bills.terms-conditions.personal_info_m')
+
 %section
   .container
     %h2= t('hybrid_bills.terms-conditions.comms').capitalize
