[CTEWEB-494] Make links for hybrid bill go to Lords Committee

--- a/app/views/hybrid_bills/pre.html.haml
+++ b/app/views/hybrid_bills/pre.html.haml
@@ -29,7 +29,7 @@
     %p
       = t('hybrid_bills.show.objecting_pre')
       = succeed "." do
-        = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+        = link_to 'https://www.parliament.uk/business/committees/committees-a-z/lords-select/high-speed-rail-west-midlands-crewe-bill-select-committee-lords/', target: '_blank' do
           = "#{t('hybrid_bills.hs2_committee')} #{t('hybrid_bills.hs2_website')}"
           %span.sr-only>
             = t('open_new_window_link')
