--- a/app/views/hybrid_bills/show.haml
+++ b/app/views/hybrid_bills/show.haml
@@ -51,7 +51,7 @@
     %p
       = t('.contact_details_b')
       = succeed "." do
-        = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+        = link_to 'https://www.parliament.uk/business/committees/committees-a-z/lords-select/high-speed-rail-west-midlands-crewe-bill-select-committee-lords/', target: '_blank' do
           = t('hybrid_bills.hs2_committee')
           %span.sr-only>
             = t('open_new_window_link')
